--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,83 @@
-<h1>All Posts</h1>
+<style>
+* {
+    font-family: Calibri;
+    
+}
+
+.page-title {
+    font-family: cambria;
+    font-size: 42px;
+    font-weight: bold;
+    position: relative;
+    float: left;
+}
+
+.new-post {
+    position: relative;
+    float: left;
+    margin-top: 24px;
+    margin-left: 20px;
+}
+
+#post-title {
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 30px;
+    position: relative;
+    float: left;
+}
+
+#num-comments {
+    color: red;
+    font-weight: bold;
+    position: relative;
+    float: right;
+}
+
+.post-box {
+   border:2px solid white;
+    border-radius: 6px;
+    padding: 10px;
+    background-color: #f4f4f4;
+    box-shadow: 1px 2px 3px #333; 
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+small {
+    font-size: 18px;
+}
+
+.clear-fix {
+    clear: both;
+}
+
+
+
+</style>
+
+
+<h1 class="page-title">All Posts</h1>
+<% if policy(Post.new).create? %>
+    <%= link_to "New Post", new_post_path, class: 'new-post btn btn-success' %>
+<% end %>
+
+<div class="clear-fix"></div>
+
 <% @posts.each do |post| %>
-    <div class="media">
-        <div class="media-body">
-            <h4 class ="media-heading">
-                <%= link_to post.title, post %>
-            </h4>
-            <small>
-                submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
-                <%= post.comments.count %> Comments
-            </small>
-        </div>
+    
+        <div class="post-box">
+            
+                <p id="post-title"><%= link_to post.title, post %></p>     
+                      <small id="num-comments">
+                        <%= post.comments.count %> Comments
+                    </small> 
+                    <div class="clear-fix"></div>
+                    <small>
+                        submitted <%= time_ago_in_words(post.created_at) %> ago by <em><strong><%= post.user.name %></strong></em><br/>
+                    </small>
+                               
+            
+        
     </div>
 <% end %>
