--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,37 @@
+
+<!-- Global Elements -->
+
+<style>
+
+* {
+    font-family: Calibri;
+    
+}
+
+#user-name {
+  position: relative;
+  float: left;
+  font-size: 18px; 
+  margin-right: 20px;
+}
+
+#link {
+  position: relative;
+  float: right;
+  margin-right: 20px;
+  font-weight: bold;
+  font-size: 16px;
+
+  }
+
+  #link:hover {
+    text-decoration: none !important;
+
+    
+  }
+
+
+</style>
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,17 +42,19 @@
 </head>
 <body>
     <div class="container">
-        <ul class="nav nav-tabs">
-            <li><%= link_to "Bloccit", root_path %></li>
-            <li><%= link_to "About", about_path %></li>
-            
+        <ul class="nav nav-pills">
+            <li class="<%= "active" if current_page?(root_path) %>"> <%= link_to "Bloccit", root_path %></li>            
+            <li class="<%= "active" if current_page?(posts_path) %>"> <%= link_to "Posts", posts_path %></li>
+            <li class="<%= "active" if current_page?(about_path) %>"> <%= link_to "About", about_path %></li>
+
             <div class="pull-right user-info">
               <% if current_user %>
-                Hello <%= current_user.email %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+                <p id="user-name"><strong>Hello <em><%= current_user.name %></em>!</strong>  
+                <p id="link"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
               <% else %>
                 <%= link_to "Sign In", new_user_session_path %> or
                 <%= link_to "Sign Up", new_user_registration_path %>
-              <% end %>
+              <% end %></p>
         </ul>
 
         <% if flash[:notice] %>
