--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
     <div class="container">
         <ul class="nav nav-pills">
             <li class="<%= "active" if current_page?(root_path) %>"> <%= link_to "Bloccit", root_path %></li>            
-            <li class="<%= "active" if current_page?(posts_path) %>"> <%= link_to "Posts", posts_path %></li>
+            <li class="<%= "active" if current_page?(topics_path) %>"> <%= link_to "Topics", topics_path %></li>
             <li class="<%= "active" if current_page?(about_path) %>"> <%= link_to "About", about_path %></li>
 
             <div class="pull-right user-info">
