--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -31,7 +31,7 @@
    </div>
    <div class="col-md-8">
     <div id="post-box">
-     <%= form_for @post do |f| %>
+     <%= form_for [@topic, @post] do |f| %>
        <div class="form-group">
          <%= f.label :title %>
          <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
