--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,15 +31,15 @@
 </style>
 
 
+<h1><%= @post.title %></h1>
 
-<div id="post-box">
-<h1 id="post-title"><%= @post.title %></h1>
-
-<% if policy(@post).edit? %>
-
-<%= link_to "Edit", edit_post_path(@post), class: 'btn btn-success' %>
-
-<% end %>
-
-<p id="post-body"><%= @post.body %></p>
+<div class="row">
+  <div class="col-md-8">
+    <p><%= @post.body %></p>
+  </div>
+  <div class="col-md-4">
+    <% if policy(@post).edit? %>
+      <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
+    <% end %>
+  </div>
 </div>
