--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,20 +1,7 @@
 
 <!-- New Post Page -->
 
-<style>
-#post-box {
-    border:2px solid white;
-    border-radius: 6px;
-    padding: 10px;
-    background-color: #f4f4f4;
-    box-shadow: 1px 2px 3px #333;
-}
 
-.well {
-    box-shadow: 1px 2px 3px #333;
-}
-
-</style>
 
 <h1>New Post</h1>
  
@@ -30,20 +17,8 @@
  </div>
    </div>
    <div class="col-md-8">
-    <div id="post-box">
-     <%= form_for [@topic, @post] do |f| %>
-       <div class="form-group">
-         <%= f.label :title %>
-         <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
-       </div>
-       <div class="form-group">
-         <%= f.label :body %>
-         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
-       </div>
-       <div class="form-group">
-         <%= f.submit "Save", class: 'btn btn-success' %>
-       </div>
-     <% end %>
- </div>
-   </div>
+    <div class="well">
+    <%= render partial: 'form', locals: { topic: @topic, post: @post} %>  
+  </div>
+</div>
  </div>
