--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,45 +1,27 @@
 
 <!-- Single Post View -->
 
-<style>
-#button {
-    position: relative;
-    float: left;
-    margin: 20px 20px 0 0;
+<div class="flash-message-space" name="flash-message"></div>
 
-}
+<div class="col-md-8">
 
+<h1 class="page-title"><%= @post.title %></h1>
 
-
-
-#post-box {
-    border:2px solid white;
-    border-radius: 6px;
-    padding: 0px 5px 5px 5px;
-    background-color: #f4f4f4;
-    box-shadow: 1px 2px 3px #333;
-    float: left;
-    margin-top: 20px;
-    width:90%;
-}
-
-#post-title {
-    margin-top: 5px;
-}
-
-
-</style>
-
-
-<h1><%= @post.title %></h1>
-
-<div class="row">
-  <div class="col-md-8">
-    <p><%= @post.body %></p>
-  </div>
-  <div class="col-md-4">
-    <% if policy(@post).edit? %>
+<div class="button">
+<% if policy(@post).edit? %>
       <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
+</div>
+
+<div class="break-float"></div>
+
+<div class="row">
+    <div class="post-box">
+  
+    <p><%= @post.body %></p>
+  </div>
+</div>
+  <div class="col-md-4">
+    
   </div>
 </div>
