--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,60 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.post-box {
+    border:2px solid white;
+    border-radius: 6px;
+    padding: 10px;
+    background-color: #f4f4f4;
+    box-shadow: 1px 2px 3px #333;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.page-title {
+    font-weight: bold;
+    float:left;
+    left: -10px;    
+    width:85%;
+}
+
+.button {
+    position:relative;
+    float:right;
+    margin-top: 25px;
+}
+
+.break-float {
+    clear:both;
+}
+
+.post-title {
+    font-weight: bold;
+    font-size: 24px;
+    position: relative;
+    float: left;
+}    
+
+.badge {
+    
+    background-color: #428BCA;
+    }
+
+.badge-div {
+    position: relative;
+    float: left;
+    margin-top:7px;
+    margin-left:10px;
+}
+
+.post-box-divider {
+    background-color:black;
+    height:2px;
+}
+
+.side-topic-name {
+    font-weight: bold;
+    font-size: 24px;
+    
+}
