--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,7 +7,7 @@
    
    <div class="row">
      <div class="col-md-4">
-      <div  class="well">
+      <div  class="post-box">
        <p><strong>Guidelines for posts</strong></p>
        <ul>
          <li>Make sure it rhymes.</li>
@@ -17,7 +17,9 @@
     </div>
   </div>
   <div class="col-md-8">    
+    <div class="post-box">
     <%= render partial: 'form', locals: {topic: @topic, post: @post } %>
+  </div>
     </div>
   </div>
  </div>
