--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,12 +17,12 @@
       <% end %>
       <div class="form-group">
         <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
+        <%= f.password_field :password, class: 'form-control', placeholder: "Enter new password" %>
         <i>(leave blank if you don't want to change it)</i>
       </div>
       <div class="form-group">
         <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
+        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter new password confirmation" %>
       </div>
       <div class="form-group">
         <%= f.password_field :current_password, class: 'form-control', placeholder: "Enter password" %>
@@ -39,6 +39,17 @@
         <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
       </div>
+      <% if current_user.avatar? %>
+         <div class="form-group">
+           <p>Current avatar</p>
+           <%= image_tag( current_user.avatar.profile.url ) %>
+         </div>
+       <% end %>
+       <div class="form-group">
+         <%= f.label :avatar %>
+         <%= f.file_field :avatar %>
+         <%= f.hidden_field :avatar_cache %>
+       </div>
       <div class="form-group">
         <%= f.submit "Update", class: 'btn btn-success' %>
       </div>
