--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -40,7 +40,9 @@
         </div><!-- media-body -->
       </div><!-- media -->
       </div><!-- post-box -->
+      
     <% end %>
+    <%= will_paginate @posts %>
   </div><!-- row -->
   
 </div><!-- col-md-8 -->
