Fixed post view to allow comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,7 +24,7 @@
         
     </div>
 
-    <% @post.comments.each do |comments| %>
+    <% @post.comments.each do |comment| %>
     <p><%= link_to (@comment.body), [@post, comment] %></p>
     <% end %>
 
@@ -44,7 +44,7 @@
    
     </div>
     <div class="post-box">
-<%= render partial: 'comments/form',  collection: @posts, locals: { topic: @topic, post: @post, comment: @new_comment} %>
+<%= render partial: 'comments/form',  locals: { topic: @topic, post: @post, comment: @new_comment} %>
 </div>
 
 
