--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -19,7 +19,7 @@
    </div>
    <div class="col-md-8">
     <div class="post-box">
-    <%= render partial: 'form', locals: { topic: @topic, post: @post} %>  
+    <%= render partial: 'posts/form', locals: { topic: @topic, post: @post, post_image: @post_image} %>  
   </div>
 </div>
  </div>
