--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,10 +23,18 @@
         </div>
         
     </div>
-
+    
+        
     <% @post.comments.each do |comment| %>
-    <p><%= link_to (@comment.body), [@post, comment] %></p>
+    <div class="post-box">
+        <p><%= link_to (comment.body), [@topic, @post] %></p>
+
+        <p><%= comment.user.name %></p>
+        
+    </div>
     <% end %>
+    
+
 
 </div>
 <div class="col-md-4">
@@ -43,9 +51,11 @@
   
    
     </div>
-    <div class="post-box">
-<%= render partial: 'comments/form',  locals: { topic: @topic, post: @post, comment: @new_comment} %>
-</div>
+    <% if current_user %>
+        <div class="post-box">        
+        <%= render partial: 'comments/form',  locals: { topic: @topic, post: @post, comment: @new_comment} %>
+    <% end %>
+    </div>
 
 
 </div>
