--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,7 +29,10 @@
     <div class="post-box">
         <p><%= link_to (comment.body), [@topic, @post] %></p>
 
-        <p><%= comment.user.name %></p>
+        <p><%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>  <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+            <% if policy(comment).destroy? %>
+                <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+            <% end %></p>
         
     </div>
     <% end %>
@@ -39,6 +42,9 @@
 </div>
 <div class="col-md-4">
     <div class="post-box">
+        <% if policy(@post).destroy? %>
+            <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
+        <% end %>
         <p><h3 class="side-topic-name"><%= @topic.name %></h3></P>
         <p><h4><%= @topic.description %><h4></p>
         <hr class="post-box-divider"></hr>
