--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -47,5 +47,8 @@
   
 </div><!-- col-md-8 -->
   <div class="col-md-4">
+    <% if policy(@topic).destroy? %>
+      <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?'} %>
+      <% end %>
     
   </div><!-- col-md-4 -->
