--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,7 +13,8 @@
   <%= form_group_tag(comment.errors[:body]) do %>
     
    <div class="form-group"> 
-    <%= f.text_area :body, rows: 4, class: 'form-control', placeholder: "Enter Comment" %>
+    <p>Do you have a comment about this post?</p>
+    <%= f.text_area :body, rows: 2, class: 'form-control', placeholder: "Enter Comment" %>
   </div>
   <% end %>
   
