--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,27 +1,39 @@
  <%= form_for [topic, post] do |f| %>
+  
   <% if post.errors.any? %>
     <div class="new-edit-alert alert alert-danger">
       <h4>There are <%= pluralize(post.errors.count, "error") %>.</h4>
       <ul>
-        <% post.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
+         <% post.errors.full_messages.each do |msg| %>
+           <li><%= msg %></li>
+         <% end %>
       </ul>
     </div>
   <% end %>
+
   <%= form_group_tag(post.errors[:title]) do %>
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
   <% end %>
+
   <%= form_group_tag(post.errors[:body]) do %>
-    <%= f.label :body %>
-    <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
+     <%= f.label :body %>
+     <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
   <% end %>
 
+<div class="form-group">
+   <%= f.label :post_image %>
+   <%= f.file_field :post_image %>
+   <%= f.hidden_field :post_image %>
+ </div>
+      <div class="form-group">
+        <%= link_to "Add Image", add_image_topic_posts_path(post_image: :post_image), class: 'btn btn-success' %>
+      </div>
 
 
-   
+   <%= image_tag(post.post_image.url) if post.post_image %>
+
   <div class="form-group">
     <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
-<% end %>
+  <% end %>
