--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -21,7 +21,7 @@
       <div class="media">
         
           <div class="media-body">
-            <div class="post-title"><%= link_to topic.name, topic %></div>
+            <div class="topic-title"><%= link_to topic.name, topic %></div>
             <div class="badge-div"><span class="badge"><%= topic.posts.count %></span></div>
 
           <div class="break-float"></div>
@@ -41,7 +41,7 @@
 
 
     <div class="post-box">
-      <h3>Newest Comments - </h3>
+      <h3>Most Active Posts - </h3>
      
     
     
