--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [topic, post, comment] do |f| %>
+<%= form_for [post, comment] do |f| %>
   <% if comment.errors.any? %>
     <div class="new-edit-alert alert alert-danger">
       <h4>There are <%= pluralize(comment.errors.count, "error") %> errors.</h4>
@@ -14,7 +14,7 @@
     
    <div class="form-group"> 
     <p>Do you have a comment about this post?</p>
-    <%= f.text_area :body, rows: 2, class: 'form-control', placeholder: "Enter Comment" %>
+    <%= f.text_area :body, rows: 2, class: 'form-control', placeholder: "Enter Comment Here" %>
   </div>
   <% end %>
   
