--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,64 +2,98 @@
 <!-- Single Post View -->
 
 
-<div class="col-md-8">
+<div class="col-md-8 post-left">
     <div class="row">
+        
         <div class="post-box">
-            <h1 class="page-title"><%= markdown @post.title %></h1><!-- post title -->
-            <% if policy(@post).destroy? %>
-                <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
-                <% end %><!-- delete button -->
-                    <div class="button">
-                    <% if policy(@post).edit? %>
-                        <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
-                    <% end %>
-                    </div><!--edit button -->
-                <div class="break-float"></div>   
-                    <p><%= markdown @post.body %></p><!-- post body -->    
-                    <small>
-                        <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
-                        submitted <%= time_ago_in_words(@post.created_at) %> ago by <em><%= @post.user.name %></em>
-                    </small><!-- posted by -->
-                </div><!-- post-box -->
-            </div><!-- row -->
-    
-    <div class="row">
-    <% @post.comments.each do |comment| %>
-    <div class="post-box comments">
-        <p><%= link_to (comment.body), [@topic, @post] %></p>
 
-        <p><%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>  <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
-            <% if policy(comment).destroy? %>
-                <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
-            <% end %></p>
-        
-    </div>
-    <% end %>
-</div>
-    
+            <div class="comment-voter">
+                <%= render partial: 'votes/voter', locals: { post: @post } %>
+            </div>
 
-
-</div>
-<div class="col-md-4">
-    <div class="post-box">
-        
-        <p><h3 class="side-topic-name"><%= @topic.name %></h3></P>
-        <p><h4><%= @topic.description %><h4></p>
-        <hr class="post-box-divider"></hr>
             
-            <% @topic.posts.each do |post| %>
-            <h5><%= link_to (markdown post.title), [@topic, post] %></h5>        
-            <% end %>                
-    
-    
-  
-   
-    </div>
-    <% if current_user %>
-        <div class="post-box">        
-        <%= render partial: 'comments/form',  locals: { topic: @topic, post: @post, comment: @new_comment} %>
-    <% end %>
-    </div>
+            <h1 class="post-title"><%= markdown @post.title %></h1><!-- post title --> 
+
+                <div class="vote-count">
+                    <h3><%= pluralize(@post.points, 'point') %></h3>
+                    <small>
+                    <%= pluralize(@post.up_votes, 'up vote') %>, 
+                    <%= pluralize(@post.down_votes, 'down vote') %>
+                    </small>
+                </div>           
+                    
+               <div class="break-float"></div>
+            <div class="post">
+            <p><%= markdown @post.body %></p><!-- post body -->
+        </div>
 
 
+            <div class="posted-by">
+            <small>
+                <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
+                submitted <%= time_ago_in_words(@post.created_at) %> ago by <em><%= @post.user.name %></em>
+            </small><!-- posted by -->
+            </div>
+
+            <div class="buttons">
+            <div class="delete-btn">
+            <% if policy(@post).destroy? %>
+                <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger delete-btn', data: {confirm: 'Are you sure you want to delete this post?'} %>
+            <% end %><!-- delete button -->
+        </div>
+
+                <div class="edit-btn">
+                <% if policy(@post).edit? %>
+                    <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
+                <% end %>
+            </div>
+            
+        </div>
+        <div class="break-float"></div>
+    </div><!-- post-box -->
+    
+        <div class="comments">
+        <% @post.comments.each do |comment| %>
+            <div class="post-box">
+                <p class="comment"><%= link_to (comment.body), [@topic, @post] %></p>
+            
+                <div class="comment-bottom">
+                    <div class="comment-by">
+                        <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>  <small><em><%= comment.user.name %></em> commented <%= time_ago_in_words(comment.created_at) %> ago</small>                
+                    </div>
+                    <div class="comment-delete">
+                        <% if policy(comment).destroy? %>
+                        <%= link_to "Delete", [@post, comment], method: :delete, class: 'btn btn-danger delete-btn' %>
+                        <% end %>
+                    </div>   
+                </div>
+                <div class="break-float"></div>
+            </div>        
+            <% end %>           
+        </div>   
+    </div>
 </div>
+
+
+
+    <div class="col-md-4 post-right">
+        <div class="row">
+            <div class="post-box">        
+                <p><h3 class="side-topic-name"><%= @topic.name %></h3></P>
+                <p><h4><%= @topic.description %><h4></p>
+                <hr class="post-box-divider"></hr>
+                
+                <% @topic.posts.each do |post| %>
+                <h5><%= link_to (markdown post.title), [@topic, post] %></h5>        
+                <% end %>                  
+            </div>
+            <% if current_user %>
+            <div class="post-box">        
+                <%= render partial: 'comments/form',  locals: { topic: @topic, post: @post, comment: @new_comment} %>
+                <% end %>
+            </div>
+        </div>
+    </div>
+
+
+    
