--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,54 +1,72 @@
-<div class="col-md-8">
-<h1 class="page-title"><%= @topic.name %></h1>
+<div class="col-md-8 post-left">
+  <div class="row">
+    <div class="post-box">
+<h1 class="post-title"><%= @topic.name %></h1>
 
-<div class="button">
-<% if policy(@topic).update? %>
-  <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
-<% end %>
+<div class="post">
+<p><%= @topic.description %></p>
+</div>
+  <div class="buttons">
+    <div class="delete-btn">
+      <% if policy(@topic).destroy? %>
+    <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?'} %>
+    <% end %>
+    </div>
+    <div class="edit-btn">   
+    <% if policy(@topic).update? %>
+    <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
+    <% end %>
+  </div>
+  
+</div>
+<div class="break-float"></div>
+</div>
 </div>
 
-<div class="break-float"></div>
+  
 
-<p class="lead"><%= @topic.description %></p>    
+ 
 
 
-
-<hr></hr>
-
-<div class="button">
-<% if policy(Post.new).create? %>
+ 
+  <div class="new-btn">
+  <% if policy(Post.new).create? %>
       <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
     <% end %>
   </div>
+<div class="break-float"></div>
 
-<div class="row"> 
-  <div class="break-float"></div>
+  <div class="row">     
+    
 
-    <% @posts.each do |post| %>
-    <div class="post-box">
-      <div class="media">
-        <div class="media-body">
-          <h4 class="media-heading">
+    
+      <% @posts.each do |post| %>
+      <div class="post-box">
+        <div class="media">
+          <div class="topic-voter">
+        <%= render partial: 'votes/voter', locals: { post: post } %>
+      </div>
+          <div class="media-body">
+            <h4 class="media-heading topic-post">
             <%= link_to (markdown post.title), [@topic, post] %>
-          </h4>
-          <small>
-             <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
-             submitted <%= time_ago_in_words(post.created_at) %> ago by
-             <%= post.user.name %><br/>
-             <%= post.comments.count %> Comments
-           </small>
+            </h4>
+            <div class="badge-div"><span class="badge"><%= post.comments.count %></span></div>
+            <div class="break-float"></div>
+            <div class="posted-by">
+            <small>
+               <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
+               submitted <%= time_ago_in_words(post.created_at) %> ago by
+               <em><%= post.user.name %></em> <%= post.comments.count %> Comments
+            </small>
+          </div>
         </div><!-- media-body -->
       </div><!-- media -->
-      </div><!-- post-box -->
-      
+    </div><!-- post-box -->      
     <% end %>
     <%= will_paginate @posts %>
-  </div><!-- row -->
-  
+  </div><!-- row -->  
 </div><!-- col-md-8 -->
-  <div class="col-md-4">
-    <% if policy(@topic).destroy? %>
-      <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?'} %>
-      <% end %>
-    
-  </div><!-- col-md-4 -->
+
+<div class="col-md-4 post-right">
+  
+</div><!-- col-md-4 -->
